Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24523

tst_QQuickListView::multipleTransitions() failing

    XMLWordPrintable

Details

    • 14e00670b7393dd16e8896b2365e6d0c154c2d9a

    Description

      Config: Using QTest library 5.0.0, Qt 5.0.0
      PASS   : tst_QQuickListView::initTestCase()
      QWARN  : tst_QQuickListView::multipleTransitions(move, then insert item before the moved item) Compat plugin, need to load for accessing meta data 
      QWARN  : tst_QQuickListView::multipleTransitions(move, then insert item before the moved item) Compat plugin, need to load for accessing meta data 
      FAIL!  : tst_QQuickListView::multipleTransitions(move, then insert item before the moved item) Compared doubles are not the same (fuzzy compare)
         Actual (item->y()): 240
         Expected (i*20.0): 320
      

      Item 16 is at 240 instead of 320.

      Even if the test does not fail, items are not placed correctly, even though this should be picked up by the check against the model. Could there also be an issue with the model?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bealam Bea Lam (closed Nokia identity) (Inactive)
            bealam Bea Lam (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes